# SplatExporter

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
lib/libgfxd/: .gitrepo
lib/yaml-cpp/: .gitrepo
src/: context.cpp  context.h  main.cpp  options.cpp  options.h  rom.cpp  rom.h  segment_registry.cpp  segment_registry.h  segtypes.h  splat_config.cpp  splat_config.h  splat_segment.cpp  splat_segment.h  symbol_addrs.cpp  symbol_addrs.h  vram_classes.cpp  vram_classes.h
src/segtypes/: binary.cpp  binary.h  c_asm_codes.cpp  c_asm_codes.h  group.cpp  group.h  header.cpp  header.h  null.cpp  null.h  section_bins.cpp  section_bins.h  section_groups.cpp  section_groups.h
src/segtypes/n64/: ci.cpp  ci.h  gfx.cpp  gfx.h  img.cpp  img.h  palette.cpp  palette.h
src/util/: file.h  string.h
